Linked spotify login and flask app

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,7 +21,7 @@
                     Remember me
                 </label>
             </div>
-            <button class="button is-block is-info is-large is-fullwidth">Login</button>
+            <button href="{{ url_for('auth.callback')}}" class="button is-block is-info is-large is-fullwidth">Login</button>
         </form>
     </div>
 </div>
