--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,10 @@
                             Home
                         </a>
                         <a href="{{ url_for('main.profile') }}" class="navbar-item">
-                            Profile
+                            Update Profile
+                        </a>
+                        <a href="{{ url_for('match.matches') }}" class="navbar-item">
+                            Matches
                         </a>
                         <a href="{{ url_for('auth.login') }}" class="navbar-item">
                             Login
