--- a/app/templates/match.html
+++ b/app/templates/match.html
@@ -33,10 +33,13 @@
           <!-- <a href="https://nicepage.app" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-hover-black u-palette-3-base u-radius-2 u-text-active-white u-text-hover-white u-btn-2">Next Match</a> -->
         </div>
       </div>
-      <form action="/matches" method="post">
+    <form action="/matches" method="post">
         <button type= "submit" class="button is-block is-info is-large is-fullwidth">Next Match</button>
     </form>
-      <!-- <button href="{{ url_for('match.matches')}}" class="button is-block is-info is-large is-fullwidth">Next Match</button> -->
+    <form action="/player" method="post">
+      <button type= "submit" class="button is-block is-info is-large is-fullwidth">See Playlist</button>
+    </form>
+    <!-- <button href="{{ url_for('match.player')}}" class="button is-block is-info is-large is-fullwidth">See Playlist</button> -->
     </div>
   </section>
 {% endblock %}
