--- a/app/templates/player.html
+++ b/app/templates/player.html
@@ -1,6 +1,129 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Your Shared Playlist with {{name}}</h1>
-<iframe src="{{spotify_uri}}" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Spotify Web Playback SDK Quick Start</title>
+</head>
+<body>
+    <h1>Spotify Web Playback SDK Quick Start</h1>
+    <button id="previous">Back</button>
+    <button id="togglePlay">Play</button>
+    <button id="next">Forward</button>
+
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        const token = '{{token}}'
+        let player
+        let id
+        window.onSpotifyWebPlaybackSDKReady = () => {
+            player = new Spotify.Player({
+                name: 'Web Playback SDK Quick Start Player',
+                getOAuthToken: cb => { cb(token); },
+                volume: 0.5
+            });
+
+            // Ready
+            player.addListener('ready', ({ device_id }) => {
+                id = device_id
+                console.log('Ready with Device ID', device_id);
+                set_device()
+            });
+
+            // Not Ready
+            player.addListener('not_ready', ({ device_id }) => {
+                console.log('Device ID has gone offline', device_id);
+            });
+
+            player.addListener('initialization_error', ({ message }) => {
+                console.error(message);
+            });
+
+            player.addListener('authentication_error', ({ message }) => {
+                console.error(message);
+            });
+
+            player.addListener('account_error', ({ message }) => {
+                console.error(message);
+            });
+
+            document.getElementById('togglePlay').onclick = function() {
+              player.togglePlay();
+              console.log('play')
+            //   play()
+            };
+
+            player.connect().then(success => {
+            if (success) {
+                console.log('The Web Playback SDK successfully connected to Spotify!');
+            }
+            });
+
+            document.getElementById('previous').onclick = function() {
+                player.previousTrack()
+                console.log('Set to previous track!');
+            };
+
+            document.getElementById('next').onclick = function() {
+                player.nextTrack()
+                console.log('Set to next track!');
+            };
+
+        }
+        // const play = ({
+        //     // spotify_uri,
+        //     // playerInstance: {
+        //     //     _options: {
+        //     //     getOAuthToken
+        //     //     }
+        //     // }
+        // }) => {
+        // getOAuthToken(token => {
+        //     fetch(`https://api.spotify.com/v1/me/player/play?device_id=${device_id}`, {
+        //     method: 'PUT',
+        //     body: JSON.stringify({ uris: 'spotify:track:7xGfFoTpQ2E7fRF5lN10tr' }),
+        //     headers: {
+        //         'Content-Type': 'application/json',
+        //         'Authorization': `Bearer ${token}`
+        //     },
+        //     });
+        // });
+        // };
+        
+        function play() {
+            console.log(token)
+            console.log(id)
+            $.ajax({
+                url: "https://api.spotify.com/v1/me/player/play?device_id=" + id,
+                type: "PUT",
+                data: '{"uris": ["spotify:track:5ya2gsaIhTkAuWYEMB0nw5"]}',
+                beforeSend: function(xhr){xhr.setRequestHeader('Authorization', 'Bearer ' + token );},
+                success: function(data) { 
+                    console.log(data)
+                }, error: function(data) { 
+                    console.log(data)
+                } 
+            });
+        }
+
+        function set_device() {
+            $.ajax({
+                url: "https://api.spotify.com/v1/me/player",
+                type: "PUT",
+                data: '{"device_ids": ["' + id + '"]}',
+                beforeSend: function(xhr){
+                    xhr.setRequestHeader('Authorization', 'Bearer ' + token );
+                    xhr.setRequestHeader("Content-Type", "application/json");
+                },
+                success: function(){ 
+                    console.log("connected")
+                }, error: function(data) { 
+                    console.log(data)
+                } 
+            });
+        }
+    </script>
+</body>
+</html>{% endblock %}
