--- a/app/templates/match.html
+++ b/app/templates/match.html
@@ -29,7 +29,7 @@
           <div class="u-image u-image-circle u-preserve-proportions u-image-1"data-image-width="598" data-image-height="598"></div>
           <h2 class="u-custom-font u-font-courier-new u-text u-text-default u-text-1">{{ name }}<br>
           </h2>
-          <p class="u-text u-text-grey-50 u-text-2">Location: {{ location }} <br> Preference: {{ preference }} <br> Age: {{ age }}</p>
+          <p class="u-text u-text-grey-50 u-text-2">Location: {{ location }} <br> Preference: {{ preference }} <br> Age: {{ age }} <br> Match Score: {{ score }}</p>
           <!-- <a href="https://nicepage.app" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-hover-black u-palette-3-base u-radius-2 u-text-active-white u-text-hover-white u-btn-2">Next Match</a> -->
         </div>
       </div>
