--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,3 +1,33 @@
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+
+    function load_spotify() {
+        console.log("button click")
+        $.getJSON('/load_spotify_data',
+          function(data) {
+              alert(data.status)
+        });
+        console.log("recieved")
+    }
+
+
+    // document.getElementById('load_spotify').onclick = function() {
+    //     console.log('loading spotify');
+    //     load_spotify()
+    //     console.log('spotify data recieved');
+    // };
+
+// $(function() {
+//     $('#load_spotify').bind('click', function() {
+//         $.getJSON('/load_spotify_data',
+//           function() {
+//       });
+// })
+// });
+
+</script>
+
+
 {% extends "base.html" %}
 {% block content %}
 <div class="content-section">
@@ -65,5 +95,32 @@
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
         </form>
+        <button type=button id='load_spotify' onclick=load_spotify()>Load Spotify Data</button>
     </div>
 {% endblock content %}
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+
+    // function load_spotify() {
+    //     console.log("button click")
+    //     $.getJSON('/load_spotify_data',
+    //       function() {
+    //     });
+    // }
+
+    // document.getElementById('load_spotify').onclick = function() {
+    //     console.log('loading spotify');
+    //     load_spotify()
+    //     console.log('spotify data recieved');
+    // };
+
+// $(function() {
+//     $('#load_spotify').bind('click', function() {
+//         $.getJSON('/load_spotify_data',
+//           function() {
+//       });
+// })
+// });
+
+</script>
