--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -9,118 +9,144 @@
         });
         console.log("recieved")
     }
-
-
-    // document.getElementById('load_spotify').onclick = function() {
-    //     console.log('loading spotify');
-    //     load_spotify()
-    //     console.log('spotify data recieved');
-    // };
-
-// $(function() {
-//     $('#load_spotify').bind('click', function() {
-//         $.getJSON('/load_spotify_data',
-//           function() {
-//       });
-// })
-// });
-
 </script>
 
-
-{% extends "base.html" %}
-{% block content %}
-<div class="content-section">
-      <div class="media">
-        <img class="rounded-circle account-img" src="{{ image_file }}">
-        <div class="media-body">
-          <h2 class="account-heading">{{ name }}</h2>
-        </div>
-      </div>
-        <form method="POST" action="" enctype="multipart/form-data">
-            {{ form.hidden_tag() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Account Info</legend>
-                <div class="form-group">
-                    {{ form.location.label(class="form-control-label") }}
-
-                    {% if form.location.errors %}
-                        {{ form.location(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.location.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.location(class="form-control form-control-lg") }}
-                    {% endif %}
+<!DOCTYPE html>
+<html>
+    <style>
+        /* body {background-color: #D7D9D7;} */
+        body {
+            background: linear-gradient(to top, #D7D9D7 0%, #FFFFFF 73.58%);
+            background-repeat: no-repeat;
+            background-attachment: fixed;}
+        input[type=text] {
+            width: 70%;
+            /* padding: 4px 20px; */
+            margin: 10px 0px;
+            box-sizing: border-box;
+            border: none;
+            border-bottom: 1px solid black;
+            outline: none;
+            text-align: right;
+        }
+        form { 
+            width: 600px;
+            transform:translate(-10%,-25%);
+        }
+        label {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            text-align: left;
+            font-weight: bold;
+            font-family: arial, sans-serif;
+            /* width: 170px; */
+            /* margin-right: 10px; */
+        }
+        .link-button {
+            background: none!important;
+            border: none;
+            padding: 15px, 10px;
+            margin: 25px;
+            /*optional*/
+            font-family: arial, sans-serif;
+            font-size: 1.25rem;
+            /*input has OS specific font-family*/
+            color: #C60F7B;
+            cursor: pointer;
+            display: inline;
+            top: 50%;
+            left: 50%;
+            transform:translate(100%,70%);
+        } 
+        .submit-button {
+            background-color: #218380;
+            border-radius: 60px;
+            border: none;
+            font-size: 1.25rem;
+            color: white;  
+            min-width: 150px;
+            min-height: 60px;
+            display: block;
+            margin: 10% 48%;
+        }
+        img {
+            transform:translate(-50%,-50%);
+            border-radius: 50%; 
+            width: 200px;
+            height: 200px;
+        }
+    </style>
+    <div style = "position: absolute;
+    width: 600px;
+    height: 400px;
+    left: 50%;
+    top: 50%;
+    transform:translate(-50%,-50%);
+    
+    background: #FFFFFF;
+    box-shadow: 0px 0px 8px 6px rgba(31, 30, 33, 0.25);"
+    >
+    <!-- <div>
+        <button class="link-button" id='load_spotify' onclick=load_spotify()>Load Spotify Data</button>
+        <button class="link-button" id='reset_pass'>Reset Password</button>
+    </div> -->
+        <img src="../static/156f5edb-bf97-484e-9d81-9c88ccf13137.png">
+        <form method="POST">
+            <!-- {{ form.hidden_tag() }} -->
+                <div class="field">
+                    <div class="control">
+                        <label location> Location
+                        <input class="input is-large" type="text" name="location" placeholder="Atlanta, GA">
+                        </label>
+                    </div>
                 </div>
-                <div class="form-group">
-                    {{ form.preference.label(class="form-control-label") }}
-                    {% if form.preference.errors %}
-                        {{ form.preference(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.preference.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.preference(class="form-control form-control-lg") }}
-                    {% endif %}
+                <div class="field">
+                    <div class="control">
+                        <label location> Age
+                        <input class="input is-large" type="text" name="age" placeholder="{{age}}">
+                        </label>
+                    </div>
                 </div>
-                <div class="form-group">
-                    {{ form.age.label(class="form-control-label") }}
-                    {% if form.age.errors %}
-                        {{ form.age(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.age.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.age(class="form-control form-control-lg") }}
-                    {% endif %}
+                <div class="field">
+                    <div class="control">
+                        <label preference> Preference
+                        <input class="input is-large" type="text" name="preference" placeholder="{{preference}}">
+                        </label>
+                    </div>
                 </div>
-                <div class="form-group">
-                    {{ form.picture.label() }}
-                    {{ form.picture(class="form-control-file") }}
-                    {% if form.picture.errors %}
-                        {% for error in form.picture.errors %}
-                            <span class="text-danger">{{ error }}</span></br>
-                        {% endfor %}
-                    {% endif %}
-                </div>
-            </fieldset>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
-            </div>
+            <button class="link-button" id='load_spotify' onclick=load_spotify()>Load Spotify Data</button>
+            <button class="link-button" id='update_pic' onclick=load_spotify()>Update Picture</button>
+            <button class="submit-button" id="submit">Save Profile</button>
         </form>
-        <button type=button id='load_spotify' onclick=load_spotify()>Load Spotify Data</button>
     </div>
-{% endblock content %}
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript">
-
-    // function load_spotify() {
-    //     console.log("button click")
-    //     $.getJSON('/load_spotify_data',
-    //       function() {
-    //     });
-    // }
-
-    // document.getElementById('load_spotify').onclick = function() {
-    //     console.log('loading spotify');
-    //     load_spotify()
-    //     console.log('spotify data recieved');
-    // };
-
-// $(function() {
-//     $('#load_spotify').bind('click', function() {
-//         $.getJSON('/load_spotify_data',
-//           function() {
-//       });
-// })
-// });
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
 </script>
+
+
+
+// <!-- <div class="field">
+//     <div class="control">
+//         <tr>
+//         <td><label> Name </label></td>
+//         <td><input class="input is-large" type="text" name="name" placeholder="Jocelyn Kavanagh" autofocus=""></td>
+//         </tr>
+//     </div>
+// </div>
+// <div class="field">
+//     <div class="control">
+//         <tr>
+//         <td><label> Email </label></td>
+//         <td><input class="input is-large" type="text" name="email" placeholder="jkavanagh3@gatech.edu" autofocus=""></td>
+//         </tr>
+//     </div>
+// </div>
+// <div class="field">
+//     <div class="control">
+//         <tr>
+//             <td><label> Location </label></td>
+//             <td><input class="input is-large" type="text" name="location" placeholder="Atlanta, GA" autofocus=""></td>
+//         </tr>
+//     </div>
+// </div> -->
