Continue UI updates - add base html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+
+{% block content %}
 <html>
     <style>
         /* body {background-color: #D7D9D7;} */
@@ -67,3 +69,4 @@
         </form>
     </div>
 </html>
+{% endblock %}
