Update password feels

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+{% extends "base.html" %}
+
+{% block content %}
 <html>
     <style>
         /* body {background-color: #D7D9D7;} */
@@ -68,3 +71,4 @@
         </form>
     </div>
 </html>
+{% endblock %}
