--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,15 @@
             border-bottom: 1px solid black;
             outline: none;
         }
+        input[type=password] {
+            width: 80%;
+            padding: 12px 20px;
+            margin: 5px 0;
+            box-sizing: border-box;
+            border: none;
+            border-bottom: 1px solid black;
+            outline: none;
+        }
         form { 
             width: 600px;
             transform:translate(10%,20%);
@@ -62,7 +71,7 @@
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="text" name="password" placeholder="Password">
+                    <input class="input is-large" type="password" name="password" placeholder="Password">
                 </div>
             </div>
             <button class="button">Sign Up</button>
