--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,15 @@
             border-bottom: 1px solid black;
             outline: none;
         }
+        input[type=text] {
+            width: 80%;
+            padding: 12px 20px;
+            margin: 5px 0;
+            box-sizing: border-box;
+            border: none;
+            border-bottom: 1px solid black;
+            outline: none;
+        }
         input[type=password] {
             width: 80%;
             padding: 12px 20px;
