--- a/app/templates/player-sdk.html
+++ b/app/templates/player-sdk.html
@@ -15,9 +15,9 @@
         <li id="queue4"></li>
         <li id="queue5"></li>
     </ol>
-    <iframe id="embed" src="{{ link }}" utm_source=generator width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
+    <!-- <iframe id="embed" src="{{ link }}" utm_source=generator width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> --> -->
     <button id="previous">Back</button>
-    <button id="togglePlay">Play</button>
+    <button id="togglePlay">Play/Pause</button>
     <button id="next">Forward</button>
 
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
@@ -190,4 +190,5 @@
 
     </script>
 </body>
-</html>{% endblock %}
+</html>
+{% endblock %}
