--- a/app/templates/match.html
+++ b/app/templates/match.html
@@ -47,7 +47,7 @@
             left: 15%;
         }
         .card {
-            position:relative;
+            position:absolute;
             width:600px;
             height:400px;
             top: 25%;
@@ -147,15 +147,16 @@
             left: 0%;
         }
         .next-arrow {
-            position:relative;
+            position:absolute;
             width:66px;
             height:400px;
-            top: -25%;
+            top: 35%;
             left: 85%;
         }
         
 
     </style>
+    <body>
     <div class = card>
         <form action="/player" method="post">
             <div class = "submit-button-class">
@@ -178,17 +179,18 @@
                 Age: {{ age }}
             </div>
             <div class = "match-location">Location: {{ location }}</div>
-        </div>       
+        </div>     
     </div>
     <div class="next-arrow">
-<form action="/matches" method="post" class="arrow">
-    <button>
-        <svg width="66" height="160" viewBox="0 0 66 160" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M63.4789 74.5637C65.6212 77.8713 65.6212 82.1287 63.4789 85.4363L18.6432 154.659C13.2272 163.021 0.249996 159.186 0.249996 149.223L0.249996 10.7771C0.249996 0.814337 13.2272 -3.02118 18.6432 5.34078L63.4789 74.5637Z" fill="#C4C4C4"/>
-            </svg>
-    </button>
-</form>
-</div>
+        <form action="/matches" method="post" class="arrow">
+            <button>
+                <svg width="66" height="160" viewBox="0 0 66 160" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M63.4789 74.5637C65.6212 77.8713 65.6212 82.1287 63.4789 85.4363L18.6432 154.659C13.2272 163.021 0.249996 159.186 0.249996 149.223L0.249996 10.7771C0.249996 0.814337 13.2272 -3.02118 18.6432 5.34078L63.4789 74.5637Z" fill="#C4C4C4"/>
+                    </svg>
+            </button>
+        </form>
+    </div>  
+</body>
 {% endblock %}
         
 </html>
